[gd_scene load_steps=26 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Menu/titlever1.png" type="Texture" id=2]
[ext_resource path="res://Logo/mainMenu.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 960, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 1280, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 1600, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 1920, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 2240, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 2560, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 2880, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 3200, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 3520, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 3840, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 4160, 0, 320, 180 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Animation",
"speed": 19.0
} ]

[sub_resource type="Animation" id=6]
resource_name = "Animation"
length = 1.5
loop = true

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Theme" id=5]

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Dialogues/Fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=1]
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = SubResource( 4 )

[node name="Menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 160, 90 )
frames = SubResource( 22 )
animation = "Animation"
frame = 6
speed_scale = 0.6
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Animation = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 160, 91 )
scale = Vector2( 1.00443, 1 )
texture = ExtResource( 3 )
hframes = 14

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_right = 1600.0
margin_bottom = 880.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
stretch_mode = 1

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = 32.0
margin_right = 60.0
margin_bottom = 123.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="StartBTN" type="Button" parent="Menu"]
margin_right = 128.0
margin_bottom = 25.0
focus_neighbour_top = NodePath("../QuitBTN")
theme = SubResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "Play"

[node name="OptionsBTN" type="Button" parent="Menu"]
margin_top = 33.0
margin_right = 128.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="QuitBTN" type="Button" parent="Menu"]
margin_top = 66.0
margin_right = 128.0
margin_bottom = 91.0
focus_neighbour_bottom = NodePath("../StartBTN")
custom_fonts/font = SubResource( 3 )
text = "Quit"

[connection signal="pressed" from="Menu/StartBTN" to="." method="_on_StartBTN_pressed"]
[connection signal="pressed" from="Menu/OptionsBTN" to="." method="_on_OptionsBTN_pressed"]
[connection signal="pressed" from="Menu/QuitBTN" to="." method="_on_QuitBTN_pressed"]
